<resources>
    <string name="app_name">Assignment</string>
    <string name="expense">Expense</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="friends_fragment">Friends Fragment</string>
    <string name="group_fragment">Group Fragment</string>
    <string name="amount">Amount</string>
    <string name="hash">#</string>
    <string name="remark">Remark</string>
    <string name="save">SAVE</string>
    <string name="close">CLOSE</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="tick_image">Tick Image</string>
    <string name="food">Food</string>
    <string name="_1773">1773</string>
    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expense</string>
    <string name="contact">contact</string>
    <string name="contact_number">contact number</string>
    <string name="rs">Rs.</string>
    <string name="_8621">8621</string>
    <string name="comma_start">(</string>
    <string name="_3">3</string>
    <string name="entries">Entries</string>
    <string name="bracket_close">)</string>
    <string name="hashSign">#</string>
    <string name="_59">59</string>
    <string name="user_name">User Name:</string>
    <string name="enter_here">Enter here</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
</resources>