<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoryInformation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rs"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#5E000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalAmount"
            android:layout_marginStart="10dp"
            android:text="@string/_8621"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#5E000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comma_start"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#5E000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:layout_marginStart="10dp"
            android:id="@+id/noOfEntries"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#5E000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entries"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#5E000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bracket_close"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#5E000000"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dataRecycler"
        android:layout_marginTop="30dp"
        />

</LinearLayout>