<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".DataRow">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/llrow"
            android:padding="11dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/imgTick"
                android:background="@color/white"
                android:contentDescription="@string/tick_image"
                android:src="@drawable/ic_launcher_foreground"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:id="@+id/category"
                android:text="@string/food"
                android:textSize="15sp"
                android:gravity="start"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:textColor="#563EE4"
                android:id="@+id/amountF"
                android:textSize="12sp"
                android:text="@string/_1773"/>

        </LinearLayout>
        
    </androidx.cardview.widget.CardView>
    
</LinearLayout>