<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DataDetailsCard">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rs"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dataAmount"
                    android:textSize="25sp"
                    android:layout_marginStart="10dp"
                    android:text="@string/_59"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/hashSign"
                    android:textColor="#5E000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/app_name"
                    android:id="@+id/dataCategory"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="#5E000000"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/dataRemark"
                android:textColor="#5E000000"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="25sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>